[gd_scene load_steps=46 format=3 uid="uid://b33a2c617wpeh"]

[ext_resource type="Script" path="res://menus/main_menu/main_menu.gd" id="1_wv75o"]
[ext_resource type="Texture2D" uid="uid://du2ycui0mnds2" path="res://UI/word_art/GAME_START.png" id="2_iwafk"]
[ext_resource type="Texture2D" uid="uid://5nejtyp6mix8" path="res://UI/word_art/BATTLE_START.png" id="3_cx1dl"]
[ext_resource type="Texture2D" uid="uid://dtapi8ffvg1ej" path="res://UI/word_art/GAME_START_DOWN.png" id="4_bdn5e"]
[ext_resource type="Texture2D" uid="uid://dometteuw755t" path="res://UI/word_art/LOBBY_HOST.png" id="4_r5ws6"]
[ext_resource type="Texture2D" uid="uid://moji3cmbltkh" path="res://UI/word_art/GAME_START_FOCUS.png" id="5_ah50c"]
[ext_resource type="Texture2D" uid="uid://brpi2odksav2s" path="res://UI/word_art/LOBBY_JOIN.png" id="5_gfm5d"]
[ext_resource type="Texture2D" uid="uid://d4h4h0hbak3jd" path="res://UI/word_art/BATTLE_START_DOWN.png" id="6_bd6hc"]
[ext_resource type="Texture2D" uid="uid://bslelq1ccsd7c" path="res://UI/word_art/OPTIONS.png" id="6_w0ceh"]
[ext_resource type="Texture2D" uid="uid://b2ycmw237cqq7" path="res://menus/main_menu/crt.png" id="8_2uxn3"]
[ext_resource type="Texture2D" uid="uid://cykvamvn63kuq" path="res://UI/word_art/LOBBY_HOST_DOWN.png" id="8_pmc18"]
[ext_resource type="Texture2D" uid="uid://cqm0xmtv620gb" path="res://UI/word_art/BATTLE_START_FOCUS.png" id="8_wx4ng"]
[ext_resource type="Texture2D" uid="uid://d0wuv8gul7rtp" path="res://UI/word_art/LOBBY_JOIN_DOWN.png" id="10_xgjyn"]
[ext_resource type="Texture2D" uid="uid://c5uoa2jkn2ola" path="res://UI/word_art/LOBBY_HOST_FOCUS.png" id="11_d5m5p"]
[ext_resource type="Texture2D" uid="uid://lrhtkfhpmx4y" path="res://UI/word_art/OPTIONS_DOWN.png" id="12_xswww"]
[ext_resource type="Texture2D" uid="uid://bhn8slgs0a5xj" path="res://UI/word_art/LOBBY_JOIN_FOCUS.png" id="14_xv6vb"]
[ext_resource type="Texture2D" uid="uid://dir5phbrcx5k4" path="res://UI/word_art/OPTIONS_FOCUS.png" id="17_1xcsj"]
[ext_resource type="Shader" path="res://UI/background/BG_scroll.gdshader" id="19_5rq4l"]
[ext_resource type="Texture2D" uid="uid://fyjqyxmg724a" path="res://menus/main_menu/moving_tex.png" id="20_bnm3p"]
[ext_resource type="Texture2D" uid="uid://dmfy3avy14qap" path="res://UI/word_art/R.png" id="21_vo6vu"]
[ext_resource type="PackedScene" uid="uid://c6crfban3jnh6" path="res://menus/main_menu/memes/soy_l.tscn" id="22_hhjs3"]
[ext_resource type="Texture2D" uid="uid://gf74g6i1ttaa" path="res://UI/word_art/O-Bots.png" id="22_khdki"]
[ext_resource type="PackedScene" uid="uid://dle0eti55rs84" path="res://menus/main_menu/memes/soy_r.tscn" id="23_8lyr0"]
[ext_resource type="Theme" uid="uid://bv4urn83158ba" path="res://UI/theme/RoboTheme.tres" id="23_h0oec"]
[ext_resource type="PackedScene" uid="uid://boh6gftujg2q0" path="res://UI/background/window_bg_100.tscn" id="24_bbiac"]
[ext_resource type="FontFile" uid="uid://binhnkh0687qg" path="res://UI/font/LanaPixel.ttf" id="24_endfs"]
[ext_resource type="PackedScene" uid="uid://6mm35ooxdona" path="res://menus/main_menu/memes/k_knife.tscn" id="24_stkql"]
[ext_resource type="PackedScene" uid="uid://clits4js13287" path="res://menus/main_menu/memes/k_gun.tscn" id="25_urfxm"]
[ext_resource type="PackedScene" uid="uid://ddx01qsshkpmh" path="res://menus/main_menu/memes/god_r.tscn" id="26_1jxwv"]
[ext_resource type="PackedScene" uid="uid://wnge5pvgn22f" path="res://menus/main_menu/memes/cup.tscn" id="26_47nha"]
[ext_resource type="PackedScene" uid="uid://cotw4gngshl28" path="res://menus/main_menu/memes/f_sus.tscn" id="27_2gpix"]
[ext_resource type="PackedScene" uid="uid://b6hbc7e77ncf1" path="res://menus/main_menu/memes/god_l.tscn" id="27_dnwu7"]
[ext_resource type="Shader" path="res://UI/shader/palette_swap.gdshader" id="31_5bp4f"]
[ext_resource type="Texture2D" uid="uid://00et7mgdndui" path="res://player_character/base_color_palette.png" id="32_cl2uc"]

[sub_resource type="Gradient" id="Gradient_v7xrr"]
offsets = PackedFloat32Array(0.455847, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.122252, 0.122252, 0.122252, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3bhqh"]
gradient = SubResource("Gradient_v7xrr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r4y6m"]
resource_local_to_scene = true
shader = ExtResource("19_5rq4l")
shader_parameter/motion = Vector2(0, 16)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/palette = SubResource("GradientTexture1D_3bhqh")

[sub_resource type="Gradient" id="Gradient_k5mav"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.127036, 0.449511, 0.661238, 0.775244)
colors = PackedColorArray(0, 0, 0, 1, 0.340339, 0.340339, 0.340339, 1, 0.687215, 0.687215, 0.687215, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5p7o8"]
frequency = 0.0027
fractal_type = 3
fractal_lacunarity = 3.14
fractal_gain = 2.5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_q8gae"]
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_k5mav")
noise = SubResource("FastNoiseLite_5p7o8")

[sub_resource type="Animation" id="Animation_bnb4d"]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:noise:seed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0.1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StaticBlack:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../R:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 0.225, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../O-Bots:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.225, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../O-Bots:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../R:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_urqgt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:noise:seed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StaticBlack:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../R:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../O-Bots:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../O-Bots:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../R:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jgn4v"]
_data = {
"Default": SubResource("Animation_bnb4d"),
"RESET": SubResource("Animation_urqgt")
}

[sub_resource type="LabelSettings" id="LabelSettings_exxbi"]
font = ExtResource("24_endfs")
font_size = 11

[sub_resource type="ShaderMaterial" id="ShaderMaterial_58eb6"]
shader = ExtResource("31_5bp4f")
shader_parameter/Max_types = 8
shader_parameter/Type = 0
shader_parameter/palett = ExtResource("32_cl2uc")

[node name="MainMenu" type="Node2D" node_paths=PackedStringArray("animation_player", "game_start", "battle_start", "host_lobby", "join_lobby", "options", "version_label")]
script = ExtResource("1_wv75o")
animation_player = NodePath("AnimationPlayer")
game_start = NodePath("CenterContainer/VBoxContainer/GameStart")
battle_start = NodePath("CenterContainer/VBoxContainer/BattleStart")
host_lobby = NodePath("CenterContainer/VBoxContainer/HostLobby")
join_lobby = NodePath("CenterContainer/VBoxContainer/JoinLobby")
options = NodePath("CenterContainer/VBoxContainer/Options")
version_label = NodePath("VersionExit/VersionLabel")

[node name="Panel" type="Panel" parent="."]
z_index = -7
offset_left = 196.0
offset_top = 144.0
offset_right = 440.0
offset_bottom = 337.0
theme = ExtResource("23_h0oec")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 64.0
offset_right = 640.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GameStart" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_iwafk")
texture_pressed = ExtResource("4_bdn5e")
texture_hover = ExtResource("5_ah50c")
texture_disabled = ExtResource("4_bdn5e")

[node name="BattleStart" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_cx1dl")
texture_pressed = ExtResource("6_bd6hc")
texture_hover = ExtResource("8_wx4ng")
texture_disabled = ExtResource("6_bd6hc")

[node name="HostLobby" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_r5ws6")
texture_pressed = ExtResource("8_pmc18")
texture_hover = ExtResource("11_d5m5p")
texture_disabled = ExtResource("8_pmc18")

[node name="JoinLobby" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_gfm5d")
texture_pressed = ExtResource("10_xgjyn")
texture_hover = ExtResource("14_xv6vb")
texture_disabled = ExtResource("10_xgjyn")

[node name="Options" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_w0ceh")
texture_pressed = ExtResource("12_xswww")
texture_hover = ExtResource("17_1xcsj")
texture_disabled = ExtResource("12_xswww")

[node name="CRT" type="Sprite2D" parent="."]
position = Vector2(318, 244)
texture = ExtResource("8_2uxn3")

[node name="ColorRect" type="ColorRect" parent="CRT"]
show_behind_parent = true
z_index = -1
offset_left = -113.0
offset_top = -82.0
offset_right = 113.0
offset_bottom = 82.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="TextureRect" parent="CRT/ColorRect"]
material = SubResource("ShaderMaterial_r4y6m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("20_bnm3p")
expand_mode = 1
stretch_mode = 1

[node name="StaticBlack" type="ColorRect" parent="CRT"]
visible = false
show_behind_parent = true
offset_left = -113.0
offset_top = -82.0
offset_right = 113.0
offset_bottom = 82.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Static" type="TextureRect" parent="CRT"]
visible = false
show_behind_parent = true
offset_left = -113.0
offset_top = -82.0
offset_right = 113.0
offset_bottom = 82.0
pivot_offset = Vector2(113, 82)
mouse_filter = 2
texture = SubResource("NoiseTexture2D_q8gae")
expand_mode = 1
stretch_mode = 1

[node name="R" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(318, 208)
texture = ExtResource("21_vo6vu")
offset = Vector2(0, -144)

[node name="O-Bots" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(318, 247)
texture = ExtResource("22_khdki")
offset = Vector2(0, -112)

[node name="Memes" type="Node2D" parent="."]

[node name="god_l" parent="Memes" instance=ExtResource("27_dnwu7")]
z_index = -8
position = Vector2(155, 98)

[node name="god_r" parent="Memes" instance=ExtResource("26_1jxwv")]
z_index = -8
position = Vector2(493, 86)

[node name="gun" parent="Memes" instance=ExtResource("25_urfxm")]
visible = false
position = Vector2(159, 214)

[node name="knife" parent="Memes" instance=ExtResource("24_stkql")]
visible = false
position = Vector2(65, 230)

[node name="sus" parent="Memes" instance=ExtResource("27_2gpix")]
visible = false
position = Vector2(468, 188)

[node name="cup" parent="Memes" instance=ExtResource("26_47nha")]
visible = false
position = Vector2(555, 225)

[node name="soy_r" parent="Memes" instance=ExtResource("23_8lyr0")]
visible = false
position = Vector2(494, 279)

[node name="soy_l" parent="Memes" instance=ExtResource("22_hhjs3")]
visible = false
position = Vector2(163, 286)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CRT/Static")
libraries = {
"": SubResource("AnimationLibrary_jgn4v")
}

[node name="VersionExit" type="CanvasLayer" parent="."]
layer = 5

[node name="VersionLabel" type="Label" parent="VersionExit"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -33.0
offset_right = 56.0
offset_bottom = -21.0
grow_vertical = 0
theme = ExtResource("23_h0oec")
text = "0.0.1"
label_settings = SubResource("LabelSettings_exxbi")

[node name="Exit" type="Button" parent="VersionExit"]
material = SubResource("ShaderMaterial_58eb6")
custom_minimum_size = Vector2(0, 16)
offset_left = 604.0
offset_top = 338.0
offset_right = 637.0
offset_bottom = 357.0
theme = ExtResource("23_h0oec")
text = "EXIT"

[node name="Win98" parent="." instance=ExtResource("24_bbiac")]

[connection signal="pressed" from="CenterContainer/VBoxContainer/GameStart" to="." method="_on_game_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BattleStart" to="." method="_on_battle_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HostLobby" to="." method="_on_host_lobby_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinLobby" to="." method="_on_join_lobby_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VersionExit/Exit" to="." method="_on_exit_pressed"]
